# grovekeeper

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
